<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BattleshipAndroidClient</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Your password</string>
    <string name="passwordretype">Retype your password</string>
    <string name="login">Login</string>
    <string name="registerNew">Register as new user</string>
    <string name="logout">Logout</string>
    <string name="preferences">Preferences</string>
    <string name="exit">Exit</string>
    <string name="savepu">Would you like to save your password and username?</string>
    <string name="boardsize">Which boardsize do you want?</string>
    <string name="save">Save</string>
    <string name="choose">Choose boardsize</string>
    <string name="startgame">Play Game</string>
    <string name="summaryUsername">Your name:</string>
    <string name="titleUsername">Name</string>
    <string name="summaryPassword">Your Password</string>
    <string name="titlePassword">Password</string>
    <string name="summaryBoardsize">Your boardsize:</string>
    <string name="titleBoardsize">Boardsize</string>
    
    <string-array name="boardsizes">
        <item >7 x 7</item>
        <item >8 x 8</item>
        <item >9 x 9</item>
        <item >10 x 10</item>
        <item >11 x 11</item>
        <item >12 x 12</item>
        <item >13 x 13</item>
    </string-array>
    <string-array name="sizeint">
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
        <item >12</item>
        <item >13</item>
    </string-array>
    <string name="loginexcist">Login with excisting Username</string>
    <string name="savedata">Do you want to save your Username and Password?</string>
    
    

</resources>