<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference 
        android:key="username" 
        android:summary="@string/summaryUsername" 
        android:title="@string/titleUsername"/>
    <EditTextPreference 
        android:key="password" 
        android:summary="@string/summaryPassword" 
        android:title="@string/titlePassword" 
        android:password="true"/>
    <ListPreference
        android:entries="@array/boardsizes"
        android:entryValues="@array/sizeint"
        android:key="boardsize"
        android:title="@string/titleBoardsize"
        android:summary="@string/summaryBoardsize"
        />
    <CheckBoxPreference 
        android:key="savedata"
        android:title="@string/savedata"
        android:defaultValue="true"/>
        

</PreferenceScreen>